--- a/_posts/2023-08-29-anti-ai.md
+++ b/_posts/2023-08-29-anti-ai.md
@@ -81,7 +81,7 @@ Remember when people were up in arms when “Space Opera Theater'' by Jason Alle
 
 You may have seen these arguments thrown at your own work, with a terse simple one word comment...
 
-_HANDS_
+> HANDS
 
 ![Epic handshake meme. On the left is "me". On the right is "AI Art Generators". In the middle above the handshake is "Being bad at drawing hands". The hands have far too many fingers.](/assets/anti-ai-art-5.png)
 
