Break the content for fun

--- a/_posts/2023-08-29-anti-ai.md
+++ b/_posts/2023-08-29-anti-ai.md
@@ -13,11 +13,13 @@ Ever been trolled by AI-art haters?
 
 I have. 
 
+![A robot covered in paint holding a paintbrush](/assets/anti-ai-art-1.png)
+
 But then I stumbled upon a truth that transformed how I see art and deal with critics. That truth?
 
-*They're right.*
+<!--break-->
 
-![A robot covered in paint holding a paintbrush](/assets/anti-ai-art-1.png)
+*They're right.*
 
 Before you dismiss this, let me explain. In this piece, you'll discover:
 
